# Hush-Renewal

./: .gitignore  README.md  daml.yaml  package.json  render.yaml
.github/workflows/: keepwarm.yml
agents/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agents/scripts/: demo_negotiation.py  run_customer.sh  run_vendor.sh
agents/src/negotiator/: __init__.py  app.py  briefs.py  config.py  errors.py  llm.py  logging.py  main.py  negotiator.py  prompts.py  schemas.py  sealer.py  settler.py
agents/tests/: test_app.py  test_isolation.py  test_sealer.py
app/: page.tsx
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/scripts/: check_ledger.py  demo_round.py  upload_dar.py
backend/src/hushrenewal/: __init__.py  main.py
backend/src/hushrenewal/api/: deps.py
backend/src/hushrenewal/api/routes/: adversarial.py  contracts.py  customer.py  health.py  matcher.py  rounds.py  vendor.py
backend/src/hushrenewal/core/: config.py  exceptions.py  logging.py
backend/src/hushrenewal/db/: base.py  models.py  repository.py
backend/src/hushrenewal/domain/: adversarial.py  agents.py  finding.py  matcher.py  parties.py  pricing.py  schemas.py
backend/src/hushrenewal/ledger/: auth.py  client.py  constants.py
backend/tests/: conftest.py  test_auth.py  test_health.py
components/sections/: HeroCopy.tsx
components/site/: Footer.tsx
components/ui/: Button.tsx  MaskBars.tsx
daml/: Main.daml  README.md  Test.daml  settlement-handshake-spec.md
deploy/vps/: Caddyfile  README.md  agent-customer.defaults  agent-vendor.defaults  hushrenewal-agent@.service  hushrenewal-backend.service
video/: gen_audio.py  narration.json  package-lock.json  package.json  remotion.config.ts  scene_frames.json  tsconfig.json
video/scripts/: capture-fixtures.mjs  capture-force.mjs  capture-live-clip.mjs  render.sh
video/src/: Gate.tsx  HushDemo.tsx  Root.tsx  style.css
video/src/fixtures/: round.json
video/src/lib/: Appear.tsx  BrowserChrome.tsx  Typewriter.tsx  fixture.ts
video/src/scenes/: S1Problem.tsx  S2Build.tsx  S3WhyCanton.tsx  S4aNegotiate.tsx  S4bClear.tsx  S4cSettle.tsx  S5Proofs.tsx  S6Close.tsx
web/: IMAGE-PROMPTS.md  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  twitter-image.alt.txt
web/lib/: agents.ts  api.ts
(+30 files in other folders)
